2007-04-01  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

	* libgnome/gnome-program.c (gnome_program_preinit): Set
	the program name to the basename of argv[0]. This is
	expected by other parts of the stack, and e.g. makes
	bug-buddy work for applets again.  (#424949)

======================= libgnome 2.18.0 ========================

2007-02-27  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-config.c:
	* tests/test-help-path.c:
	Remove duplicated header includes.

======================= libgnome 2.17.92 =======================

2007-02-20  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Dist MAINTAINERS.

======================= libgnome 2.17.91 =======================

======================= libgnome 2.17.90 =======================

2007-01-12  Christian Persch  <chpe@svn.gnome.org>

	* libgnome/gnome-program.c: Improve gnome_program_init docs. Bug
	#395089, patch by Jens Granseuer.

2007-01-12  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/libgnome-2.0-uninstalled.pc.in:
	* libgnome/libgnome-2.0.pc.in:
	Move some libs that aren't exposed in the headers to
	Requires.private. Built the entire jhbuild moduleset
	without problems with this patch. Closes bug #352193.
	Patch from Samuel Thibault.

======================== libgnome 2.17.3 ======================

2007-01-10  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/desktop_gnome_sound.schemas.in: Add two keys for
	the new mixer support in gnome-control-center. Patch from
	Jan Arne Petersen. Closes bug #394731.

======================== libgnome 2.17.2 ======================

2007-01-09  Christian Persch  <chpe@svn.gnome.org>

	* autogen.sh:
	* configure.in: Use automake 1.9.

2007-01-09  Kjartan Maraas  <kmaraas@gnome.org>

	* NEWS: Update for the release.
	* schemas/Makefile.am: Add a missing schema.

2007-01-06  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/Makefile.am:
	* schemas/desktop_gnome_applications_at_mobility.schemas.in: