@@ -9,8 +9,8 @@ AC_PREREQ(2.54)
 #
 m4_define([libgnome_major_version], [2])
 m4_define([libgnome_minor_version], [18])
-m4_define([libgnome_micro_version], [0])
-m4_define([libgnome_interface_age], [0])
+m4_define([libgnome_micro_version], [1])
+m4_define([libgnome_interface_age], [1])
 # If you need a modifier for the version number. 
 # Normally empty, but can be used to make "fixup" releases.
 m4_define([libgnome_extraversion], [])
