@@ -7,7 +7,7 @@ libgnome_serverdir=@libexecdir@
 Name: libgnome
 Description: libgnome
 Requires: glib-2.0 libbonobo-2.0
-Requires.private: ORBit-2.0 gconf-2.0 gnome-vfs-2.0
+Requires.private: ORBit-2.0 gconf-2.0 gnome-vfs-2.0 esound
 Version: @VERSION@
 Libs: -L${libdir} -lgnome-2 -lpopt
 Cflags: -I${includedir}/libgnome-2.0
