@@ -1,3 +1,11 @@
+2007-04-09  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* libgnome/gnome-program.c: Docs fix.
+	* libgnome/libgnome-2.0-uninstalled.pc.in:
+	* libgnome/libgnome-2.0.pc.in: Add esound to
+	Requires.private.
+	* configure.in: Up version.
+
 2007-04-01  Matthias Clasen  <mclasen@redhat.com>
 
 	Merge from trunk:
